added pom dependencies and logging

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
-<groupId>edu.matc.entjava.userdisplayexercise</groupId>
-<artifactId>userdisplayexercise</artifactId>
+<groupId>entjava.week9exercise</groupId>
+<artifactId>week9</artifactId>
 <packaging>war</packaging>
 <version>1.0-SNAPSHOT</version>
-<name>userdisplayexercise Maven Webapp</name>
+<name>week9 Maven Webapp</name>
 <url>http://maven.apache.org</url>
 
 <properties>
@@ -15,6 +15,8 @@
   <!-- TODO make sure your mysql driver version matches your mysql version -->
   <mysql-version>8.0.16</mysql-version>
   <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
+  <log4j-version>2.17.1</log4j-version>
+  <jersey-version>2.29.1</jersey-version>
 </properties>
 
 <dependencies>
@@ -35,10 +37,31 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>${mysql-version}</version>
   </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>${log4j-version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>${log4j-version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.glassfish.jersey.containers</groupId>
+    <artifactId>jersey-container-servlet</artifactId>
+    <version>${jersey-version}</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.glassfish.jersey.inject</groupId>
+    <artifactId>jersey-hk2</artifactId>
+    <version>${jersey-version}</version>
+  </dependency>
 
 </dependencies>
 <build>
-  <finalName>userdisplayexercise</finalName>
+  <finalName>week9exercise</finalName>
   <pluginManagement>
     <plugins>
       <plugin>
