--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
 </properties>
 
 <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.4.3.Final</version>
+    </dependency>
+    <!-- c3p0 - used to handle connection pooling with hibernate -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0 -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-c3p0</artifactId>
+        <version>6.4.3.Final</version>
+    </dependency>
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
