--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,4 @@
-# TODO Update the following values for YOUR environment
-
-driver=com.mysql.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/sample
 username=root
-password=student
+password=21Today$34
